<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_language_key"
        android:title="@string/pref_language_title"
        android:summary="%s"
        android:dialogTitle="@string/pref_language_title"
        android:entries="@array/pref_language_entries"
        android:entryValues="@array/pref_language_values"
        android:defaultValue="@string/pref_language_default" />

    <EditTextPreference
        android:defaultValue="all"
        android:dialogTitle="@string/pref_community_title"
        android:key="@string/pref_community_key"
        android:summary="@string/pref_community_title"
        android:title="@string/pref_community_title" />

</PreferenceScreen>